--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1284,7 +1284,7 @@ height: 150px;
     box-sizing: border-box;
 }
 
-.js-tab li.current{
+.js-tab li.active{
     width:34%;
     background: rgb(236, 241, 250);
     border-bottom: none;
