--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1376,7 +1376,7 @@ footer a {
   box-sizing: border-box;
 }
 
-.js-tab li.current {
+.js-tab li.active {
   width: 34%;
   background: #ecf1fa;
   border-bottom: none;
