--- a/resources/sass/style.css
+++ b/resources/sass/style.css
@@ -1298,7 +1298,7 @@ footer a {
   box-sizing: border-box;
 }
 
-.js-tab li.current {
+.js-tab li.active {
   width: 34%;
   background: #ecf1fa;
   border-bottom: none;
